overflow and cache fix

--- a/app/styles/partials/_constants.scss
+++ b/app/styles/partials/_constants.scss
@@ -10,8 +10,7 @@ body{
   color: white;
   background: white;
   position: absolute;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 html{
