--- a/app/styles/utils/_helpers.scss
+++ b/app/styles/utils/_helpers.scss
@@ -52,3 +52,6 @@ $ease-cubic-in-out: cubic-bezier(0.645, 0.045, 0.355, 1);
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
 }
+
+.root{
+}
